# SkillBox

./: .gitignore
module_11/task_1/CryptCaesar/: main.cpp
module_11/task_2/TicTacToe/: main.cpp
module_13/task_1/compareDel/: main.cpp
module_13/task_3/VecDB/: main.cpp
module_14/task_3/EmailValidCheck/: main.cpp
module_14/task_4/EqualMatrices/: main.cpp
module_14/task_4/IsValidIP/: main.cpp
module_14/task_5/DiagonaleMatrix/: main.cpp
module_14/task_5/NumbersComparator/: main.cpp
module_14/task_6/MatrixVectorMultip/: main.cpp
module_14/task_8/Minecraft/: main.cpp
module_15/task_1/SeaBattle/: main.cpp
module_15/task_2/MyQuarter/: main.cpp
module_15/task_2/Task2/: main.cpp
module_15/task_3/Self-isolation/: main.cpp
module_15/task_4/Radio/: main.cpp
module_16/task_2/Fractions/: Fractions.pro  main.cpp
module_16/task_2/TotalPrice/: main.cpp
module_16/task_3/Calculator/: main.cpp
module_16/task_5/SmartHouse/: main.cpp
module_17/task_1/BanquetTable/: main.cpp
module_17/task_2/ReversArray/: main.cpp
module_17/task_2/TicTacToe_2/: main.cpp
module_17/task_3/IsSubStr/: main.cpp
module_17/task_3/Snake/: main.cpp
module_17/task_4/EqualMatrices/: main.cpp
module_17/task_7/Bumps/: main.cpp
module_17/task_8/Minecraft/: main.cpp
module_17/task_9/BattleOfShips/: main.cpp
module_18/task_1/Task1/: main.cpp
module_18/task_2/BunnyJumper/: main.cpp
module_32/task_1/json_creation/: CMakeLists.txt  main.cpp
module_32/task_2/JSON_Parsing/: .gitignore  CMakeLists.txt  main.cpp
module_38/task_2/HTMLEditor/: CMakeLists.txt  main.cpp
(+187 files in other folders)
